[package]
name = "erased-serde"
version = "0.3.10"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Type-erased Serialize and Serializer traits"
repository = "https://github.com/dtolnay/erased-serde"
documentation = "https://github.com/dtolnay/erased-serde"
keywords = ["serde", "erasure"]
include = ["Cargo.toml", "src/**/*.rs", "LICENSE-*", "README.md"]
readme = "README.md"
edition = "2018"
exclude = ["/sgx/*"]

[dependencies]
serde = { git = "https://github.com/veracruz-project/serde.git",  branch="veracruz-v1" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#serde_cbor = "0.9"
#serde_derive = "1.0"
#serde_json = "1.0"

[features]
unstable-debug = []
default = ["serde/default"]
mesalock_sgx = ["sgx_tstd","serde/mesalock_sgx"]

[[test]]
name = "test"
path = "tests/readme.rs"

[badges]
travis-ci = { repository = "dtolnay/erased-serde" }
